# nullmath

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml
src/nullmath/: __init__.py
src/nullmath/tests/: test_nullmath.py
