[project]
name = "nullmath"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joseph Moorhouse", email = "j.moorhouse1898@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.290",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mkdocs>=1.5.2",
    "pytest>=7.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = [
  "E",    # pycodestyle - Error
  "W",    # pycodestyle - Warning
  "F",    # pyflakes
  "D",    # pydocstyle
  "I",    # Isort
]

extend-select = [
  "B",    # flake-bugbear
  "Q",    # flake-quotes
  "UP",   # pyupgrade
  "RUF",  # ruff-specific-rules
  "PERF", # perflint
  "TRY",  # tryceratops
  "PL",   # pylint
  "PGH",  # pygrep-hooks
  "ERA",  # extend-select
  "TD",   # flake8-todos
  "PTH",  # flake8-use-pathlib
  "ARG",  # flake8-unused-arguments
  "TCH",  # flake8-type-checking
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "RET",  # flake8-return
  "PT",   # flake8-pytest-style
  "PYI",  # flake8-pyi
  "T20",  # flake8-print
  "PIE",  # flake8-pie
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "FA",   # flake8-future-annotations
  "EM",   # flake8-errmsg
  "C4",   # flake8-comprehensions
  "S",    # flake8-bandit
  "ANN",  # flake8-annotations
]

[tool.ruff.extend-per-file-ignores]
"test*" = ["S101"]
"__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
case-sensitive = true
